overlays/armhf/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: htpc
spec:
  entryPoints: []
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      middlewares: []
      priority: 0
      services:
        - kind: Service
          name: emby
          namespace: "htpc"
          port: 8096
